<resources>
    <string name="app_name">DebtDestroyed</string>
    <string name="action_settings">Settings</string>
    <!--Connection-->
    <string name="network_is_connected">Network is connected</string>
    <string name="network_is_disconnected">Network is disconnected</string>

    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="signup_fragment_label">Sign Up</string>
    <string name="phone_number_fragment_label">@string/signup_fragment_label</string>
    <string name="promo_code_fragment_label">Promo Code</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Authentication-->
    <string name="label_action_login">Log In</string>
    <string name="label_action_signup">Sign Up</string>
    <string name="label_terms">By signing up, you agree to our Terms of Service &amp; Privacy Policy</string>
    <string name="hyperlink">By signing up, you agree to our <a href="https://www.geeksforgeeks.org/">Terms of Service &amp; Privacy Policy.</a></string>
    <string name="label_enter_email_to_reset_password">Enter your email and we\'ll send you instructions on how to reset your password.</string>
    <string name="label_whats_your_date_of_birth">What\'s your date of birth?</string>
    <string name="label_help">help?</string>

    <string name="hint_email_input">Email</string>
    <string name="hint_password_input">Password</string>
    <string name="hint_phone_input">Phone Number</string>
    <string name="hint_fname_input">First Name</string>
    <string name="hint_promocode_input">Enter Promo code(Optional)</string>
    <string name="hint_promocode_input_notes">If you have one, enter your promo code to earn higher prizes and VIP status.</string>
    <string name="hint_lname_input">Last Name</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="hint_month_input">MM</string>
    <string name="hint_date_input">DD</string>
    <string name="hint_year_input">YYYY</string>
    <string name="invalid_input">What went wrong: </string>

    <!--Home-->
    <string name="savings_loan_amount_paid">$%1$d</string>
    <string name="savings_number_of_tickets">%1$s Tickets</string>
    <string name="banner_title_amount_paid_to_student_loans">Amount Paid To Your Student Loans This Week</string>
    <string name="banner_footnote_tickets_enter_to_weekly_pool">your tickets are automatically entered into the weekly prize pool</string>
    <string name="banner_this_weeks_prize">This Week\’s Prize</string>
    <string name="banner_winner_will_be_announce">The winner will be announced Tuesday at 10am PT </string>
    <string name="banner_how_to_earn_tickets">How To Earn Tickets?</string>
    <string name="banner_verify_student_loan">Verify your student loan accounts to start earning tickets!</string>
    <string name="action_verify_student_loan">Verify Student Loan —></string>
    <string name="earn_tickets_for_this_week_prize">Earn Tickets For This\nWeek\'s Prize</string>
    <string name="past_weekly_winners">Past Weekly Winners</string>
    <string name="earning_round_ups_1">For every $1 paid towards your student loans. Just pay your student loans like normal, and you earn tickets!</string>
    <string name="earning_round_ups_2">For every question you get correct in our daily trivia. Play Now ——></string>

    <string-array name="wordsArray">
        <item></item>
        <item>$10</item>
        <item>$20</item>
        <item>$30</item>
        <item>$40</item>
        <item></item>
    </string-array>

    <!--Settings-->
    <string name="settings_enter_winner_information">Enter Winner Information</string>
    <string name="settings_connected_accounts">Connected Accounts</string>
    <string name="settings_contact_us">Contact Us</string>
    <string name="settings_legal_disclosure">Legal Disclosure</string>
    <string name="settings_leave_feedback">Leave Feedback</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_delete_account">Delete Account</string>

    <!--Disclosure-->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="sweepstake_rules">Sweepstake Rules</string>
    <string name="game_rules">Game Rules</string>

    <string name="title_activity_bottom_nav_main">BottomNavMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_trivia">Trivia</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_dashboard">Balance</string>
    <string name="title_settings">Settings</string>

    <string name="set_up">Set up</string>
    <!--Balance-->
    <string name="power_ups">Power ups</string>
    <string name="transaction_history">Transaction History</string>
    <string name="loan_account">Loan Account</string>
    <string name="earn_10x_tickets_and_more">Earn 10x tickets and more…</string>
    <string name="when_you_upgrade_to_the_diamond_subscription">When you upgrade to the Diamond subscription</string>
    <string name="loan_payment">Loan Payment</string>

    <!--Waitlist-->
    <string name="waitlist_title">Debt Destroyed Waitlist</string>
    <string name="waitlist_content">There has been a surge in users joiing Debt Destroyed. You\'ve been temporarily placed on out waitlist, and we\'ll notify you by email when a spot opens. Thanks for your patience.</string>
    <!--Trivia-->
    <string name="trivia">Trivia</string>
    <string name="debt_destroyed">Debt Destroyed</string>
    <string name="play_daily_trivia">Play Daily Trivia</string>
    <string name="trivia_subtitle">Compete once per day in a 15-question quiz! Whoever gets the most questions correct in the shortest amount of time, wins $50 towards their student loan. \n\nWinner is chosen at  midnight PT and will be Venmo\'ed, Cash Applied, or Zelle\’d the prize.</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="score">Score</string>
    <string name="current_leading_score">Current Leading Score</string>
    <string name="the_winner_will_be_announced_tomorrow">the winner will be announced tomorrow</string>
    <string name="points">Points</string>
    <string name="time">Time</string>
    <string name="start_next_trivia">Start New Trivia</string>
    <string name="tab_leadership">Leadership</string>
    <string name="past_winners">Past Winners</string>

    <!--Daily trivia-->
    <string name="next_game_starts_in">Next Game Starting In:</string>
    <!--Scholarship-->
    <string name="find_scholarships_grants">Find scholarships and grants.</string>
    <string name="find_scholarships_grants_subtitle">We\'ll notify you when new scholarships become available that fit your profile!</string>
    <string name="title_scholarship">Scholarships</string>
    <string name="action_contact_us">Contact\nUs</string>
    <string name="question_2_of_10">question %1$d of %2$d</string>
    <string name="seconds_left">%1$d seconds</string>
    <string name="see_tiebreakrules">See <u>tiebreaker rules.</u></string>

    <!--dummy-->
    <array name="emoji">
        <item>@drawable/emo1</item>
        <item>@drawable/emo2</item>
        <item>@drawable/emo3</item>
    </array>

    <!--Reminder Popup-->
    <string name="reminder_texts_before_every_game">Reminder Texts Before Every Game</string>
    <string name="reminder_popup_content">By enabling, you authorize Debt Destroyer to send recurring automated reminder messages at the mobile number used to sign up. Consent is not a condition of any purchase. Reply HELP for help and STOP to cancel. Msg frequency varies. Msg and data rates may apply. <u>Privacy Policy Terms of Use</u> Questions: danieljones@nomadmoments.com</string>
    <string name="enable_reminder_texts">Enable Reminder Texts</string>
    <string name="no_thanks">No Thanks</string>
</resources>
