<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/OnBoardingFragment">

    <fragment
        android:id="@+id/OnBoardingFragment"
        android:name="com.debtdestroyer.android.ui.auth.onboarding.OnBoardingFragment"
        android:label=""
        tools:layout="@layout/fragment_on_boarding">

        <action
            android:id="@+id/action_onBoardingFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_onBoardingFragment_to_SignupFragment"
            app:destination="@id/SignupFragment" />
        <action
            android:id="@+id/action_onBoardingFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.debtdestroyer.android.ui.auth.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />

        <action
            android:id="@+id/action_LoginFragment_to_ForgotPasswordFragment"
            app:destination="@id/ForgotPasswordFragment" />

    </fragment>

    <fragment
        android:id="@+id/ForgotPasswordFragment"
        android:name="com.debtdestroyer.android.ui.auth.forgotpassword.ForgotPasswordFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_forgot_password">

    </fragment>

    <fragment
        android:id="@+id/SignupFragment"
        android:name="com.debtdestroyer.android.ui.auth.signup.SignupFragment"
        android:label="@string/signup_fragment_label"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/action_SignupFragment_to_PhoneNumberFragment"
            app:destination="@id/PhoneNumberFragment" />
    </fragment>

    <fragment
        android:id="@+id/PhoneNumberFragment"
        android:name="com.debtdestroyer.android.ui.phonenumber.PhoneNumberFragment"
        android:label="@string/phone_number_fragment_label"
        tools:layout="@layout/fragment_phone_number">
        <action
            android:id="@+id/action_PhoneNumberFragment_to_UserInfoFragment"
            app:destination="@id/UserInfoFragment" />

    </fragment>

    <fragment
        android:id="@+id/UserInfoFragment"
        android:name="com.debtdestroyer.android.ui.userinfo.UserInfoFragment"
        android:label="@string/phone_number_fragment_label"
        tools:layout="@layout/fragment_user_info">

    </fragment>

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.debtdestroyer.android.ui.trivia.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_animation"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.debtdestroyer.android.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/bank_animation"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>


</navigation>