<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alphaBlack">

    <com.google.android.material.card.MaterialCardView
        style="@style/CardStyle"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_large"
        app:cardCornerRadius="@dimen/_18sdp"
        app:contentPadding="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/action_enable_reminder">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Debt.Destroyer.Heading.Black"
                        android:text="@string/reminder_texts_before_every_game"
                        android:textSize="@dimen/heading_medium_text_size" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_margin="@dimen/margin_medium"
                        android:src="@drawable/dummy_reminder_notify" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/Debt.Destroyer.Body"
                        android:paddingVertical="@dimen/margin_large"
                        android:text="@string/reminder_popup_content" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_enable_reminder"
                style="@style/Debt.Destroyer.RoundedButton"
                android:layout_width="match_parent"
                android:text="@string/enable_reminder_texts"
                app:layout_constraintBottom_toTopOf="@+id/action_no_thanks" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/action_no_thanks"
                style="@style/Debt.Destroyer.Gradient.Heading"
                android:layout_width="match_parent"
                android:padding="@dimen/margin_medium"
                android:text="@string/no_thanks"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/body_text_size"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>