<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_180sdp"
            android:background="@drawable/bg_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/start_text_view"
            style="@style/Debt.Destroyer.Caption.White"
            android:padding="@dimen/_10sdp"
            android:text="@string/start_next_trivia"
            app:fontFamily="@font/montserratmedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/help_text_view"
            style="@style/Debt.Destroyer.Caption.White"
            android:layout_width="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/label_help"
            app:fontFamily="@font/montserratmedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/heading_text_view"
            style="@style/Debt.Destroyer.Heading.White"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/current_leading_score"
            app:fontFamily="@font/montserratsemibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_text_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sub_heading_text_view"
            style="@style/Debt.Destroyer.Caption.White"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/the_winner_will_be_announced_tomorrow"
            app:fontFamily="@font/montserrat_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading_text_view" />


        <include
            android:id="@+id/layout_list"
            layout="@layout/bottomsheet_list_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_heading_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>